# submission.d2r2.aksw.org

./: .gitignore  README.md  Taskfile.yml  ceur-ws.css  editor_section.html  event.ttl  graph.ttl  paper-mapping.rq  paper.ttl
.github/: pull_request_template.md
.github/workflows/: build.yml  pr-comment.yml
Vol-XXX/: index.html
agreement-form/: Taskfile.yml  metadata-editor.yml  metadata.yml  pyproject.toml
agreement-form/10/: metadata.yml
agreement-form/11/: metadata.yml
agreement-form/2/: metadata.yml
agreement-form/4/: metadata.yml
agreement-form/6/: metadata.yml
agreement-form/8/: metadata.yml
agreement-form/9/: metadata.yml
agreement-form/Preface/: metadata.yml
agreement-form/submission/: agreement.py
ceur-submission/: Taskfile.yml
index/: graph.ttl
source-management/: Dockerfile  Taskfile.yml  live.main.tex
source-management/10/: head.tex  main.bib  main.tex  preamble.tex
source-management/11/: ceurart.cls  main.tex  sample-1col+minted.tex  sample-ceur.bib
source-management/2/: bibliography.bib  main.tex
source-management/4/: main.tex  references.bib  reviews.tex
source-management/4/chapters/: 01_Introduction.tex  02_State_of_the_Art.tex  03_Resources.tex  04_Implementation.tex  05_Experiments_Results.tex  06_Conclusion.tex
source-management/6/: bibliography.bib  ceurart.cls  main.tex
source-management/8/: cas-refs.bib  main.tex
source-management/9/: ceurart.cls  main.abs  main.tex  main.xmpdata  sample-ceur.bib
source-management/Preface/: ceurart.cls  main.tex  references.bib
