[tool.poetry]
name = "submission-d2r2-aksw-org"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <natanael.arndt@eccenca.com>"]
license = "MIT"
readme = "../README.md"
packages = [{include = "submission"}]

[tool.poetry.dependencies]
python = "^3.11"
reportlab = "^3.6.12"
pypdf = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
