[tool.poetry]
name = "submission-d2r2-aksw-org"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <natanael.arndt@eccenca.com>"]
license = "MIT"
readme = "../README.md"
packages = [{include = "submission"}]

[tool.poetry.dependencies]
python = ">=3.9"
reportlab = "^3.6.12"
pypdf = "^3.6.0"
pyyaml = "^6.0"
click = "^8.1.3"

[tool.poetry.scripts]
fill_form = "submission.agreement:fill_form"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
